force-app/main/default/objects/FIN_SettlementItem__c/FIN_SettlementItem__c.object-meta.xml
<CustomObject>
    <label>Settlement Item</label>
    <nameField>
        <displayFormat>SI-{0000000000}</displayFormat>
        <label>Settlement Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>