force-app/main/default/objects/FIN_SettlementItem__c/fields/ACH_Status__c.field-meta.xml
<CustomField>
    <fullName>ACH_Status__c</fullName>
    <label>ACH Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Exported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>