force-app/main/default/objects/FIN_SettlementItem__c/fields/FIN_Contract__c.field-meta.xml
<CustomField>
    <fullName>FIN_Contract__c</fullName>
    <formula>FIN_PaymentDistribution__r.FIN_Payment__r.FIN_Order__r.Contract.FIN_ParentContract__r.Name</formula>
    <label>Contract</label>
    <type>Text</type>
</CustomField>