force-app/main/default/objects/FIN_SettlementItem__c/fields/FIN_InvoiceSchedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_InvoiceSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Schedule</label>
    <referenceTo>FIN_InvoiceSchedule__c</referenceTo>
    <relationshipLabel>Settlement Items</relationshipLabel>
    <relationshipName>Settlement_Items</relationshipName>
    <type>Lookup</type>
</CustomField>