force-app/main/default/objects/FIN_SettlementItem__c/fields/FIN_LibraryAssociation__c.field-meta.xml
<CustomField>
    <fullName>FIN_LibraryAssociation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Library Association</label>
    <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
    <relationshipLabel>Settlement Items</relationshipLabel>
    <relationshipName>Settlement_Items</relationshipName>
    <type>Lookup</type>
</CustomField>