force-app/main/default/objects/FIN_SettlementItem__c/fields/FIN_ManualAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_ManualAmount__c</fullName>
    <label>Manual $ Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>