force-app/main/default/objects/FIN_SettlementItem__c/fields/FIN_ParentSettlementSchedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_ParentSettlementSchedule__c</fullName>
    <label>Parent Settlement Schedule</label>
    <referenceTo>FIN_SettlementSchedule__c</referenceTo>
    <relationshipLabel>Settlement Items</relationshipLabel>
    <relationshipName>Settlement_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>