force-app/main/default/objects/FIN_SettlementItem__c/fields/FIN_PaymentDistribution__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentDistribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Distribution</label>
    <referenceTo>FIN_PaymentDistribution__c</referenceTo>
    <relationshipLabel>Settlement Items</relationshipLabel>
    <relationshipName>Settlement_Items</relationshipName>
    <type>Lookup</type>
</CustomField>