force-app/main/default/objects/FIN_SettlementItem__c/fields/FIN_Payout__c.field-meta.xml
<CustomField>
    <fullName>FIN_Payout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payout</label>
    <type>Checkbox</type>
</CustomField>