force-app/main/default/objects/FIN_SettlementItem__c/fields/FIN_RemittanceStatus__c.field-meta.xml
<CustomField>
    <fullName>FIN_RemittanceStatus__c</fullName>
    <label>Remittance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>