force-app/main/default/objects/FIN_SettlementItem__c/fields/FIN_SubContract__c.field-meta.xml
<CustomField>
    <fullName>FIN_SubContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubContract</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contract.FIN_ParentContract__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Settlement Items</relationshipLabel>
    <relationshipName>Settlement_Items</relationshipName>
    <type>Lookup</type>
</CustomField>