force-app/main/default/objects/FIN_SettlementItem__c/validationRules/LibraryAssociationRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>LibraryAssociationRequired</fullName>
    <active>true</active>
    <description>If Manual Adjustment, Library Association must be filled.</description>
    <errorConditionFormula>ISBLANK(FIN_LibraryAssociation__c)
&amp;&amp; TEXT(FIN_EntryType__c) == &apos;Manual Adjustment&apos;</errorConditionFormula>
    <errorDisplayField>FIN_LibraryAssociation__c</errorDisplayField>
    <errorMessage>Library Association is required for Manual Adjustment.</errorMessage>
</ValidationRule>