force-app/main/default/objects/FIN_SettlementItem__c/listViews/My_Settlement_Items.listView-meta.xml
<ListView>
    <fullName>My_Settlement_Items</fullName>
    <columns>NAME</columns>
    <columns>FIN_PaymentDistribution__c</columns>
    <columns>FIN_ParentSettlementSchedule__c</columns>
    <columns>ACH_Status__c</columns>
    <columns>FIN_Payout__c</columns>
    <columns>FIN_RemittanceStatus__c</columns>
    <columns>FIN_SubContract__c</columns>
    <columns>FIN_Contract__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Settlement Items</label>
</ListView>